@@ -1,3 +1,7 @@
+2004-11-23  Pascal Scheffers  <pascal@scheffers.net>
+
+	* tkchat.tcl: Added /jest for /nolog/me; /memo catcher
+
 2004-11-22  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl: Started removing the web scraper code to complete
